[tool.poetry]
name = "music-zen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "1.0.3" 
pytube3 = "9.6.4" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
