[tool.poetry]
name = "music-zen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
moviepy = "1.0.3" 
pytube = "^11.0" 
librosa ="^0.5"
tensorflow = "^2.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
